src/objects/Application_Field__c.object
<CustomObject>
    <description>This is part of the application design on the portal.</description>
    <fields>
        <fullName>Application_Method__c</fullName>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>Boostrap style for field</description>
        <inlineHelpText>Boostrap style for field</inlineHelpText>
        <label>Class Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Field_Styles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>To add the error message that needs to be displayed on client side.</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique External ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique External ID</inlineHelpText>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>This is the label for the field which appears on the portal.</description>
        <inlineHelpText>This is the label for the field which appears on the portal.</inlineHelpText>
        <label>Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Reciprocity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Reciprocity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Reinstatement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this related to license reinstatement?</description>
        <label>License Reinstatement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this related to a license renewal?</description>
        <label>License Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this related to a license?</description>
        <label>License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Objects on portal</description>
        <inlineHelpText>Objects on portal</inlineHelpText>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Objects_on_portal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>Order  Number of the field</description>
        <label>Order Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <description>This is the subsection where the field is found.</description>
        <label>Parent</label>
        <referenceTo>Application_Subsection__c</referenceTo>
        <relationshipName>Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Permit_Reinstatement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this for permit reinstatement?</description>
        <label>Permit Reinstatement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is this related to a permit renewal?</description>
        <label>Permit Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this related to a permit?</description>
        <label>Permit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a read-only field?</description>
        <inlineHelpText>Is this a read-only field?</inlineHelpText>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regex_Validation__c</fullName>
        <description>To add the regex validation formula to do client validations.</description>
        <label>Regex Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this required?</description>
        <inlineHelpText>Is this required?</inlineHelpText>
        <label>Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>These are the field options for fields shown on the portal</description>
        <inlineHelpText>These are the field options for fields shown on the portal</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Field_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validator__c</fullName>
        <description>Validation for the created field</description>
        <inlineHelpText>Validation for the created field</inlineHelpText>
        <label>Validator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Field_Validator</valueSetName>
        </valueSet>
    </fields>
    <label>Application Field</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Object_Name__c</columns>
        <columns>NAME</columns>
        <columns>Application_Method__c</columns>
        <columns>Label__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Type__c</columns>
        <columns>Credential_Type__c</columns>
        <columns>Validator__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>